--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.19.3",
     "aos": "^2.3.4",
     "flowbite": "^2.4.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.416.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
