--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@ant-design/plots": "^2.2.8",
     "antd": "^5.19.3",
     "aos": "^2.3.4",
     "flowbite": "^2.4.1",
