--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@ant-design/plots": "^2.2.8",
-    "antd": "^5.19.3",
+    "antd": "^5.20.5",
     "aos": "^2.3.4",
     "flowbite": "^2.4.1",
     "gsap": "^3.12.5",
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
