--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,18 @@
     "@ant-design/plots": "^2.2.8",
     "antd": "^5.20.5",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "flowbite": "^2.4.1",
     "gsap": "^3.12.5",
     "lucide-react": "^0.416.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
