--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,24 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@ant-design/plots": "^2.2.8",
-    "antd": "^5.20.5",
+    "@studio-freight/lenis": "^1.0.42",
+    "antd": "^5.21.1",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "flowbite": "^2.4.1",
+    "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.416.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
