--- a/client/package.json
+++ b/client/package.json
@@ -20,19 +20,25 @@
     "flowbite": "^2.4.1",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.416.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.0.9",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-router": "^7.0.2",
     "react-router-dom": "^6.25.1",
     "react-scroll": "^1.9.0",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.13",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
