--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-router": "^7.0.2",
     "react-router-dom": "^6.25.1",
