--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.416.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.2.2",
     "react-day-picker": "^9.0.9",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
