--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@ant-design/plots": "^2.2.8",
+    "@stomp/stompjs": "^7.0.0",
     "@studio-freight/lenis": "^1.0.42",
     "antd": "^5.21.1",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.0",
     "flowbite": "^2.4.1",
     "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
@@ -40,6 +42,7 @@
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14"
   },
