--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
-    "@ant-design/plots": "^2.2.8",
+    "@ant-design/plots": "^1.2.6",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@stomp/stompjs": "^7.0.0",
     "@studio-freight/lenis": "^1.0.42",
     "antd": "^5.21.1",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.0",
     "flowbite": "^2.4.1",
@@ -42,9 +47,11 @@
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "rollup": "^4.38.0",
     "sockjs-client": "^1.6.1",
     "styled-components": "^6.1.13",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -57,6 +64,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
-    "vite": "^5.3.4"
+    "vite": "^6.2.3"
   }
 }
